2007-05-03  Wade Berrier  <wberrier@novell.com>

	* generator/gapi2-codegen.in:
	* parser/gapi2-fixup.in:
	* parser/gapi2-parser.in:
	Don't use 'which' anymore, as it doesn't work in all caes (ie: when symlinks are
	in the way)

2007-04-28  Mike Kestner  <mkestner@novell.com>

	* generator/NativeCallbackSignature.cs :
	* generator/Signal.cs : don't use ref IntPtr in native callback sigs
	for struct parameters.  Use IntPtr and StructureToPtr.  Fixes the 
	layout issues in MD introduced by the structure marshaling rework.

2007-04-24  Aaron Bockover  <abockover@novell.com>

	* gtk/Widget.custom (StyleGetProperty): return null if 
	gtksharp_widget_style_get_property returns FALSE (property 
	doesn't exist) [Fixes #81445]

	* gtk/glue/widget.c (gtksharp_widget_style_get_property): check 
	return of gtk_widget_class_find_style_property for NULL; function now
	returns TRUE if spec is not NULL, FALSE otherwise

2007-04-23  Brad Taylor  <brad@getcoded.net>
	
	* gtk/TreePath.custom: Override Equals and compare based upon the
	  underlying indicies, instead of the object reference.
	  [Fixes #81398]

2007-04-23  Mike Kestner  <mkestner@novell.com>

	* glib/Value.cs : add support for accessing generic struct boxed types
	as objects.  [Fixes #79224]

2007-04-20  Mike Kestner  <mkestner@novell.com>

	* generator/CallbackGen.cs : switch to NativeCallbackSignature.
	* generator/GenBase.cs : add NativeCallbackType member.
	* generator/IGeneratable.cs : add NativeCallbackType member.
	* generator/ManagedCallString.cs : add guarded post call struct
	marshaling back to the native struct.
	* generator/NativeCallbackSignature.cs : new parallel to ImportSignature
	but using NativeCallbackType instead of MarshalType.
	* generator/Signal.cs : switch vm and sig marshaler callbacks to 
	NativeCallbackSignature. Perform guarding post call struct marshaling
	back to the native struct.
	* generator/Parameters.cs : add NativeCallbackType member.