@@ -1,3 +1,9 @@
+2007-06-05  Mike Kestner  <mkestner@novell.com>
+
+	* glib/ManagedValue.cs (ReleaseWrapper): new method.
+	* glib/Value.cs : release the ManagedValue wrapper to avoid leaks.
+	[Fixes #81799]
+
 2007-05-03  Wade Berrier  <wberrier@novell.com>
 
 	* generator/gapi2-codegen.in:
